[tool.black]
line-length = 88

[tool.mypy]
exclude = "tests"

[tool.setuptools.packages.find]
where = ["src"]
include = ["unittest_extensions"]
exclude = ["unittest_extensions.tests"]
namespaces = false

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "unittest-extensions"
version = "0.2.2"
authors = [
    { name="Maximos Nikiforakis", email="nikiforos@live.co.uk" },
]
description = "Extension of Python's standard unittest library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Testing :: Unit",
    "Topic :: Software Development :: Testing :: BDD",
]

[project.urls]
Homepage = "https://github.com/Maxcode123/unittest-extensions"
Documentation = "https://maxcode123.github.io/unittest-extensions/"
Issues = "https://github.com/Maxcode123/unittest-extensions/issues"